--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
         body {
             font-family: Arial, sans-serif; 
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            padding: 0;
-            background-color: rgb(214, 118, 134);
+            flex-direction: column; 
+            align-items: center; 
+            justify-content: center; 
+            height: 100vh; 
+            background-color: #db7eba;
         }
          h1 {
             color: white;
@@ -22,32 +20,30 @@
         }
         .calculator {
             background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px; 
+            border-radius: 10px; 
         }
         #display {
-            width: 100%;
-            height: 60px;
-            box-sizing: border-box;
+            width: 100%; 
+            height: 60px; 
             border: none;
-            border-radius: 6px;
-            background-color: #fcf1fd;
+            border-radius: 6px; 
+            background-color: #f4dbf6;
             text-align: right;
-            margin-bottom: 16px;
-            font-size: 25px;
+            margin-bottom: 16px; 
+            font-size: 25px; 
         }
         .box-bottons {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            display: grid; 
+            grid-template-columns: repeat(4, 1fr); 
             gap: 10px;
         }
         button {
-            padding: 15px;
+            padding: 15px; 
             font-size: 18px;
             border: none;
             border-radius: 5px;
-            background-color: #f4efef;
+            background-color: #f9eef4;
             cursor: pointer;
         }
         button:hover {
