--- a/2index.html
+++ b/2index.html
@@ -18,7 +18,7 @@
             justify-content: center;
             height: 100vh; 
             width: 100%; 
-            background-color: rgb(214, 118, 134);
+            background-color:#db7eba;
         }
         #cronometro{
             background-color: #fff;
@@ -32,10 +32,10 @@
             background-color: #fff; 
             height: 250px; 
             width: 400px; 
-            border: 3px solid #dd90c0; 
+            border: 3px solid #d49fd7; 
             border-radius: 10px; 
             font-size: 60px; 
-            color: #eb90b7; 
+            color: #ed9bbf; 
         }
         #acoes{
             display: flex; 
@@ -55,7 +55,7 @@
             border: none; 
             border-radius: 8px;
             cursor: pointer;
-            background-color: #eea3c3; 
+            background-color: #e3c3e7; 
             color: white;  
         }
         #acoes button:hover{
