--- a/3index.html
+++ b/3index.html
@@ -12,7 +12,7 @@
     }
 
     body {
-        background-color: rgb(214, 118, 134);
+        background-color: #db7eba;
         height: 100vh;
         display: flex;
         align-items: center;
